--- a/hydrogen-lang.cabal
+++ b/hydrogen-lang.cabal
@@ -1,6 +1,6 @@
 
 name:           hydrogen-lang
-version:        0.2.0.0
+version:        0.3.0.0
 cabal-version:  >= 1.10
 build-type:     Simple
 license:        GPL-3
@@ -26,8 +26,10 @@ Library
   build-depends:
     base               >= 4   && < 5,
     containers         >= 0.5 && < 0.6,
+    dlist              >= 0.7 && < 0.8,
     text               >= 1.2 && < 1.3,
     mtl                >= 2.2 && < 2.3,
+    pretty             >= 1.1 && < 1.2,
     lens               >= 4.9 && < 4.10,
     system-filepath    >= 0.4 && < 0.5,
     regex-applicative  >= 0.3 && < 0.4,
@@ -36,15 +38,12 @@ Library
   exposed-modules:
     He.Error
     He.Lexer
-    He.Monad
     He.Parser
     He.RefGraph
     He.Scope
   other-modules:
     He.Lexer.Tokens
     He.Lexer.Types
-    He.Monad.State
-    He.Monad.Types
   default-extensions:
     NoImplicitPrelude
     TupleSections
@@ -64,6 +63,7 @@ Library
     ViewPatterns
     OverloadedStrings
     DeriveDataTypeable
+    GeneralizedNewtypeDeriving
   other-extensions:
     TemplateHaskell
 
